# ray-tracer-challenge

./: .gitignore  CMakeLists.txt
resources/: default-scene.yaml  empty.yaml  obj-scene.yaml  puppets.yaml  reflection-refraction-scene.yaml  refraction.yaml  test-scene.yaml
src/: RayTracerRenderer.cpp  RayTracerRenderer.h  main.cpp
src/debug/: Timer.cpp  Timer.h
src/engine/: Bounds.cpp  Bounds.h  Color.cpp  Color.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  WorkScheduler.h
src/engine/util/: RayMath.h
src/raytracer/: Camera.cpp  Camera.h  Computations.h  Intersection.h  Intersections.cpp  Intersections.h  Material.h  ObjLoader.cpp  ObjLoader.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  RayTracerRenderer.cpp  RayTracerRenderer.h  SceneLoader.cpp  SceneLoader.h  SceneParser.cpp  SceneParser.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Transformations.cpp  Transformations.h  World.cpp  World.h
src/raytracer/lighting/: CheckersPattern.cpp  CheckersPattern.h  GradientPattern.cpp  GradientPattern.h  Material.h  Pattern.cpp  Pattern.h  PointLight.cpp  PointLight.h  StripePattern.cpp  StripePattern.h
src/raytracer/lighting/patterns/: CheckersPattern.cpp  Pattern.cpp  Pattern.h  StripePattern.cpp  StripePattern.h
src/raytracer/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Group.cpp  Group.h  Plane.cpp  Plane.h  Shape.cpp  Shape.h  SmoothTriangle.cpp  SmoothTriangle.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/raytracer/util/: RayMath.h
test/: BoundsTest.cpp  CameraTest.cpp  ComputationsTest.cpp  CubeTest.cpp  GradientPatternTest.cpp  MaterialTest.cpp  RayTest.cpp  RayTracerRendererTest.cpp  SceneParserTest.cpp  SphereTest.cpp  TestPattern.h
